--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: "重塑认知-->创新方法-->平衡价值"
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://Heart-Eyed-World.github.io/images/title.jpeg
 # 你的favicon（出现在浏览器tab上）图片URL，建议使用较小(64px × 64px)的图片
-favicon: https://github.com/Heart-Eyed-World/Heart-Eyed-World.github.io/blob/master/images/title.jpeg
+favicon: https://Heart-Eyed-World.github.io/images/favicon.ico
 
 # Tabs in header. There are 'Blog', 'About', 'Archive', 'Tags'
 # and URL Link(e.g. 'Theme' tab below) tabs. If you don't need one, just delete
