--- a/.github/workflows/GitHubActionsMirror.yml
+++ b/.github/workflows/GitHubActionsMirror.yml
@@ -12,6 +12,6 @@ jobs:
         uses: pixta-dev/repository-mirroring-action@v1
         with:
           target_repo_url:
-            git@gitee.com:<your gitee name>/first_cpp/.git
+            git@gitee.com:<your gitee name>/Heart-Eyed-World/.git
           ssh_private_key:
             ${{ secrets.GITHUB_GITEE_SYN }}
