--- a/.github/workflows/GitHubActionsMirror.yml
+++ b/.github/workflows/GitHubActionsMirror.yml
@@ -14,4 +14,4 @@ jobs:
           target_repo_url:
             git@gitee.com:<your gitee name>/Heart-Eyed-World/.git
           ssh_private_key:
-            ${{ secrets.GITHUB_GITEE_SYN }}
+            ${{ secrets.GITHUBGITEESYN }}
