--- a/.github/workflows/GitHubActionsMirror.yml
+++ b/.github/workflows/GitHubActionsMirror.yml
@@ -12,6 +12,6 @@ jobs:
         uses: pixta-dev/repository-mirroring-action@v1
         with:
           target_repo_url:
-            git@gitee.com:<Heart-Eyed-World>/Heart-Eyed-World/.git
+            gitee.com/heart-eyed-world/Heart-Eyed-World
           ssh_private_key:
             ${{ secrets.GITHUBGITEESYN }}
