--- a/.github/workflows/GitHubActionsMirror.yml
+++ b/.github/workflows/GitHubActionsMirror.yml
@@ -1,17 +1,31 @@
-name: 'GitHub Actions Mirror'
+name: Sync
 
-on: [push, delete]
+on: page_build
 
 jobs:
-  mirror_to_gitee:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout'
-        uses: actions/checkout@v1
-      - name: 'Mirror to gitee'
-        uses: pixta-dev/repository-mirroring-action@v1
+      - name: Sync to Gitee
+        uses: wearerequired/git-mirror-action@master
+        env:
+          # 注意在 Settings->Secrets 配置 GITEE_RSA_PRIVATE_KEY
+          SSH_PRIVATE_KEY: ${{ secrets.GITHUBGITEESYN  }}
         with:
-          target_repo_url:
-            git@gitee.com:Heart-Eyed-World/Heart-Eyed-World/.git
-          ssh_private_key:
-            ${{ secrets.GITHUBGITEESYN }}
+          # 注意替换为你的 GitHub 源仓库地址
+          source-repo: git@github.com:Heart-Eyed-World/Heart-Eyed-World/.git
+          # 注意替换为你的 Gitee 目标仓库地址
+          destination-repo: git@gitee.com:Heart-Eyed-World/Heart-Eyed-World/.git
+
+      - name: Build Gitee Pages
+        uses: Heart-Eyed-World/gitee-pages-action@main
+        with:
+          # 注意替换为你的 Gitee 用户名
+          gitee-username: Heart-Eyed-World
+          # 注意在 Settings->Secrets 配置 GITEE_PASSWORD
+          gitee-password: ${{ secrets.GITHUB_GITEE_SYN
+ }}
+          # 注意替换为你的 Gitee 仓库，仓库名严格区分大小写，请准确填写，否则会出错
+          gitee-repo: heart-eyed-world/Heart-Eyed-World
+          # 要部署的分支，默认是 master，若是其他分支，则需要指定（指定的分支必须存在）
+          branch: main
