--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
        - name: 'Build Gitee Pages'
-        uses: Heart-Eyed-World/gitee-pages-action@main
+        uses: Heart-Eyed-World/gitee-pages-action@master
         with:
           # 注意替换为你的 Gitee 用户名
           gitee-username: Heart-Eyed-World
