--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-       - name: 'Build Gitee Pages'
+       - name: Build Gitee Pages
         uses: Heart-Eyed-World/gitee-pages-action@master
         with:
           # 注意替换为你的 Gitee 用户名
