--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -10,7 +10,7 @@ jobs:
         uses: wearerequired/git-mirror-action@master
         env:
           # 注意在 Settings->Secrets 配置 GITEE_RSA_PRIVATE_KEY
-          SSH_PRIVATE_KEY: ${{ secrets.GITHUBGITEESYN  }}
+          SSH_PRIVATE_KEY: ${{ secrets.GITEE_RSA_PRIVATE_KEY  }}
         with:
           # 注意替换为你的 GitHub 源仓库地址
           source-repo: git@github.com:Heart-Eyed-World/Heart-Eyed-World/.git
@@ -23,7 +23,7 @@ jobs:
           # 注意替换为你的 Gitee 用户名
           gitee-username: Heart-Eyed-World
           # 注意在 Settings->Secrets 配置 GITEE_PASSWORD
-          gitee-password: ${{ secrets.GITHUB_GITEE_SYN
+          gitee-password: ${{ secrets.GITEE_PASSWORD
  }}
           # 注意替换为你的 Gitee 仓库，仓库名严格区分大小写，请准确填写，否则会出错
           gitee-repo: heart-eyed-world/Heart-Eyed-World
