--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -18,7 +18,7 @@ jobs:
           destination-repo: git@gitee.com:Heart-Eyed-World/Heart-Eyed-World/.git
 
       - name: Build Gitee Pages
-        uses: Heart-Eyed-World/gitee-pages-action@main
+        uses: Heart-Eyed-World/gitee-pages-action@master
         with:
           # 注意替换为你的 Gitee 用户名
           gitee-username: Heart-Eyed-World
@@ -27,4 +27,4 @@ jobs:
           # 注意替换为你的 Gitee 仓库，仓库名严格区分大小写，请准确填写，否则会出错
           gitee-repo: heart-eyed-world/Heart-Eyed-World
           # 要部署的分支，默认是 master，若是其他分支，则需要指定（指定的分支必须存在）
-          branch: main
+          branch: master
