--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -18,7 +18,7 @@ jobs:
           destination-repo: git@gitee.com:Heart-Eyed-World/Heart-Eyed-World/.git
 
       - name: Build Gitee Pages
-        uses: Heart-Eyed-World/gitee-pages-action@master
+        uses: Heart-Eyed-World/gitee-pages-action@main
         with:
           # 注意替换为你的 Gitee 用户名
           gitee-username: Heart-Eyed-World
