--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ footer-links:
   behance: # https://www.behance.net/<username>
   dribbble:
   zhihu: 
-  email: juzerxie@gmail.com
+  email: junzexie@yeah.net
   facebook:
   flickr:
   github: Heart-Eyed-World 
